--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -43,7 +43,8 @@ workspace = true
 
 [dependencies]
 brush-core = { version = "^0.3.4", path = "../brush-core" }
-clap = { version = "4.5.40", features = ["derive", "env", "wrap_help"] }
+clap = { version = "4.5.45", features = ["derive", "env"] }
+color-print = "0.3.7"
 const_format = "0.2.34"
 git-version = "0.3.9"
 tracing = "0.1.41"
@@ -79,6 +80,7 @@ expectrl = { git = "https://github.com/zhiburt/expectrl", rev = "a0f4f7816b9a47a
 glob = "0.3.2"
 indent = "0.1.1"
 junit-report = "0.8.3"
+pretty_assertions = { version = "1.4.1", features = ["unstable"] }
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = "0.9.34"
