--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -17,6 +17,7 @@ workspace = true
 [dependencies]
 anyhow = "1.0.98"
 brush-shell = { version = "^0.2.21", path = "../brush-shell" }
-clap = { version = "4.5.40", features = ["derive"] }
+clap = { version = "4.5.45", features = ["derive"] }
+clap_complete = "4.5.57"
 clap_mangen = "0.2.29"
 clap-markdown = "0.1.5"
