--- a/brush-parser/Cargo.toml
+++ b/brush-parser/Cargo.toml
@@ -20,11 +20,13 @@ bench = false
 [features]
 fuzz-testing = ["dep:arbitrary"]
 debug-tracing = ["peg/trace"]
+diagnostics = ["dep:miette"]
 
 [dependencies]
 arbitrary = { version = "1.4.2", optional = true, features = ["derive"] }
 cached = "0.56.0"
 indenter = "0.3.4"
+miette = { version = "7.6.0", optional = true, default-features = false, features = ["derive"] }
 peg = "0.8.5"
 thiserror = "2.0.15"
 tracing = "0.1.41"
@@ -34,6 +36,7 @@ utf8-chars = "3.0.5"
 anyhow = "1.0.98"
 criterion = { version = "0.5.1", features = ["html_reports"] }
 insta = { version = "1.43.1", features = ["glob", "ron", "yaml"] }
+miette = { version = "7.6.0", features = ["fancy"] }
 pretty_assertions = { version = "1.4.1", features = ["unstable"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = "0.9.34"
@@ -44,3 +47,7 @@ pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }
 [[bench]]
 name = "parser"
 harness = false
+
+[[example]]
+name = "miette"
+required-features = ["diagnostics"]
