--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -80,6 +80,7 @@ expectrl = { git = "https://github.com/zhiburt/expectrl", rev = "a0f4f7816b9a47a
 glob = "0.3.2"
 indent = "0.1.1"
 junit-report = "0.8.3"
+predicates = "3.1.3"
 pretty_assertions = { version = "1.4.1", features = ["unstable"] }
 regex = "1.11.2"
 serde = { version = "1.0.219", features = ["derive"] }
