--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -75,9 +75,11 @@ uuid = { version = "1.18.1", features = ["js"] }
 
 [dev-dependencies]
 anyhow = "1.0.100"
+brush-parser = { version = "^0.2.20", path = "../brush-parser" }
 assert_cmd = "2.0.17"
 assert_fs = "1.1.3"
 colored = "3.0.0"
+criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
 descape = "3.0.0"
 diff = "0.1.13"
 expectrl = { git = "https://github.com/zhiburt/expectrl", rev = "a0f4f7816b9a47a191dd858080e8fd80ff71cd96" }
@@ -95,3 +97,10 @@ test-with = { version = "0.15.3", default-features = false, features = [
 ] }
 version-compare = "0.2.0"
 walkdir = "2.5.0"
+
+[target.'cfg(unix)'.dev-dependencies]
+pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }
+
+[[bench]]
+name = "shell"
+harness = false
