--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -56,6 +56,7 @@ clap = { version = "4.5.51", features = ["derive", "env"] }
 color-print = "0.3.7"
 const_format = "0.2.35"
 git-version = "0.3.9"
+itertools = "0.14.0"
 tracing = "0.1.43"
 tracing-subscriber = "0.3.22"
 human-panic = "2.0.4"
