--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -386,14 +386,16 @@ jobs:
 
       - name: Compare public APIs with main
         run: |
-          set -euo pipefail
+          set -euxo pipefail
 
           mkdir diffs
 
           for crate in $(./scripts/enum-lib-crates.sh); do
-            echo "# Public API diff for crate: ${crate}"
-            cargo public-api diff -p $crate main..${{ github.ref }} --color=always || true
-          done > ./diffs/api-diff-${crate}.md
+            echo "# Public API diff for crate: ${crate}" >./diffs/api-diff-${crate}.md
+            cargo public-api diff -p $crate main..${GITHUB_REF} --color=always >>./diffs/api-diff-${crate} || true
+          done
+        env:
+          GITHUB_REF: ${{ github.ref }}
 
       - name: Upload test report
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
