--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -392,7 +392,7 @@ jobs:
 
           for crate in $(./scripts/enum-lib-crates.sh); do
             echo "# Public API diff for crate: ${crate}" >./diffs/api-diff-${crate}.md
-            cargo public-api diff -p $crate main..${GITHUB_REF} --color=always >>./diffs/api-diff-${crate} || true
+            cargo public-api diff -p $crate origin/main..${GITHUB_REF} --color=always >>./diffs/api-diff-${crate} || true
           done
         env:
           GITHUB_REF: ${{ github.ref }}
