--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -400,10 +400,10 @@ jobs:
 
           for crate in $(./scripts/enum-lib-crates.sh); do
             out=./diffs/${crate}.txt
-            cargo public-api diff -p $crate origin/main..target --color=always >${out}
+            cargo public-api diff -sss -p $crate origin/main..target >${out}
 
             # Generate no-op diff as point of comparison
-            cargo public-api diff -p $crate target..target --color=always >${crate}.nop.txt
+            cargo public-api diff -p $crate target..target >${crate}.nop.txt
 
             if [[ $(cat ${out}) != $(cat ${crate}.nop.txt) ]]; then
               echo "# Public API changes for crate: ${crate}" >./reports/api-diff-${crate}.md
